2010-08-30  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/imagewin.cc : Explicitly set pixel format of the 'inter_surface'.
	  Might fix Dominik's colour issues if the SDL default does not match the 
	  display surfaces

2010-08-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/bg/ and data/si: added autonotes.txt for each game. For now these mostly
	  list global flags found and known for the games with some description of the 
	  set flag.
	  The idea is to replace these descriptions with witty text and have them appear
	  in the notebook (press'n'). I've written some stuff for BG already but not 
	  near enough.

2010-08-29  Ryan Nunn <colourles@users.sourceforge.net>
	* Added ability to right click on option buttons in gumps. Right clicking 
	  will select to previous option in the list.
	* Layout of video Options Gump been reworked slightly so it make more 
	  sense. Changed things to Windowed mode lets you choose from a larger list
	  of display sizes that include resolutions that are likely to be wanted.
	* Video Options gump now has an 'APPLY' button instead of 'CANCEL' and 'OK'.
	  Pressing apply will obviously apply the changes. You must apply changes 
	  before pressing the check mark to close the gump.
	* Video Options gump now brings up a new 'Countdown_gump' after applying 
	  settings to confirm that the settings work. If the users fails to press
	  YES before the countdown has expired, the settings are reverted.
	* Video Options gump will alert the user if the selected settings will cause 
	  the rendering size to be smaller than 320x200 (and consequently cause 
	  trouble with exults user interface).
	* Can now do some limited arbitrary scaling. Its designed to fit the 'game
	  area' to whatever display resolution you've selected and also apply 
	  pixel aspect ratio correction. Two extra config settings have been added
	  to control the arbitrary scaling options: